--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div class="header-left">
-                <img class="header-logo" src="./images/header-logo.png">
+                <img class="header-logo" src="./images/アビニシヲアイコン2.png">
             </div>
             <div class="container">
                 <a href="#" class="menu-icon"><span class="fa fa-bars"></span></a>
