メイン作成

--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
                 </ul>
             </div>
         </header>
+        <div class="main-wrapper">
+            <div class="container">
+                <p>大学生3人のスタジオ</p>
+                <h1>ABINICIOの紹介</h1>
+                <h2>是非覗いてみてください</h2>
+                <div class="btn-wrapper">
+                    <a href="#" class="btn signup">新規登録はこちら</a>
+                </div>
+            </div>
+        </div>
         <footer>
 
         </footer>
