メイン2の作成

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                         <a href="#" class="btn signup">新規登録はこちら</a>
                     </div>
                 </div>
+                <div class="main2">
+                    
+                </div>
             </div>
         </div>
         <footer>
