--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </header>
         <div class="main-wrapper">
             <div class="container">
-                <div class="main">
+                <div class="limit">
                     <p>大学生3人のスタジオ</p>
                     <h1>ABINICIOの紹介</h1>
                     <h2>是非覗いてみてください</h2>
@@ -36,7 +36,11 @@
                     </div>
                 </div>
                 <div class="main2">
-                    
+                    <div class="container">
+                        <div class="limit">
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
