メイン2作成　横並びにできてない

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Progate</title>
+        <script>
+            (function(d) {
+              var config = {
+                kitId: 'tut8kjf',
+                scriptTimeout: 3000,
+                async: true
+              },
+              h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+            })(document);
+        </script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://use.typekit.net/zro6yrg.css">
         <link rel="stylesheet" href="stylesheet.css">
@@ -35,12 +45,15 @@
                         <a href="#" class="btn signup">新規登録はこちら</a>
                     </div>
                 </div>
-                <div class="main2">
-                    <div class="container">
-                        <div class="limit">
-
-                        </div>
-                    </div>
+                
+            </div>
+        </div>
+        <div class="main2">
+            <div class="container">
+                <div class="limit">
+                    <h1>アビニシヲについて</h1>
+                    <p>スタジオアビニシヲは大学生3名で作られたスタジヲです。三人称視点のゲームを作成中で、最終的にはSteamで公開し、フィードバックをもらう予定です。是非プレイしてもらいたいので、新規登録をお忘れなく！</p>
+                    <img src="./images/abinicio.png" alt="アビシニヲ">
                 </div>
             </div>
         </div>
