--- a/index.html
+++ b/index.html
@@ -51,9 +51,13 @@
         <div class="main2">
             <div class="container">
                 <div class="limit">
-                    <h1>アビニシヲについて</h1>
-                    <p>スタジオアビニシヲは大学生3名で作られたスタジヲです。三人称視点のゲームを作成中で、最終的にはSteamで公開し、フィードバックをもらう予定です。是非プレイしてもらいたいので、新規登録をお忘れなく！</p>
+                    <div class="limit2">
+                        <h1>アビニシヲについて</h1>
+                        <p>スタジオアビニシヲは大学生3名で作られたスタジヲです。三人称視点のゲームを作成中で、最終的にはSteamで公開し、フィードバックをもらう予定です。是非プレイしてもらいたいので、新規登録をお忘れなく！</p>
+                        <div class="clear"></div>
+                    </div>
                     <img src="./images/abinicio.png" alt="アビシニヲ">
+                    <div class="clear"></div>
                 </div>
             </div>
         </div>
