--- a/index.html
+++ b/index.html
@@ -61,6 +61,37 @@
                 </div>
             </div>
         </div>
+        <div class="main3">
+            <div class="heading">
+                <h1>member</h1>
+            </div>
+            <div class="limit3">
+                <div class="contents">
+                    <div class="content">
+                        <div class="content-icon">
+                            <img src="./images/content-icon.png" alt="Rin">
+                            <p>Rin</p>
+                        </div>
+                        <p>主に全ての管理を担当。方針決めやメンバーのタスク管理、ゲーム制作では設計を行っている。</p>
+                    </div>
+                    <div class="content">
+                        <div class="content-icon">
+                            <img src="./images/content-icon.png" alt="Daiki">
+                            <p>Daiki</p>
+                        </div>
+                        <p>主に3Dグラフィックを担当。キャラクターデザインやオブジェクトのデザインも担当。</p>
+                    </div>
+                    <div class="content">
+                        <div class="content-icon">
+                            <img src="./images/content-icon.png" alt="Miku">
+                            <p>Miku</p>
+                        </div>
+                        <p>主にキャラクターの立ち絵、ストーリー作りを担当。ゲーム設計では、全面的なバックアップを行っている。</p>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+            </div>
+        </div>
         <footer>
 
         </footer>
