ファビコンの設定

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <link rel="stylesheet" href="https://use.typekit.net/zro6yrg.css">
         <link rel="stylesheet" href="stylesheet.css">
         <link rel="stylesheet" href="responsive.css">
+        <link rel="icon" href="./images/アビニシヲアイコン2.png" >
+        <link rel="apple-touch-icon" sizes="180x180" href="./images/アビニシヲアイコン2.png">
+        <link rel="icon" type="image/png" sizes="256x256" href="./images/アビニシヲアイコン2.png">
     </head>
     <body>
         <header>
