画像の上の名前の位置変更とレスポンシブル改善

--- a/index.html
+++ b/index.html
@@ -75,21 +75,21 @@
                             <img src="./images/content-icon.png" alt="Rin">
                             <p>Rin</p>
                         </div>
-                        <p>主に全ての管理を担当。方針決めやメンバーのタスク管理、ゲーム制作では設計を行っている。</p>
+                        <p class="Text-content">主に全ての管理を担当。方針決めやメンバーのタスク管理、ゲーム制作では設計を行っている。</p>
                     </div>
                     <div class="content">
                         <div class="content-icon">
                             <img src="./images/content-icon.png" alt="Daiki">
                             <p>Daiki</p>
                         </div>
-                        <p>主に3Dグラフィックを担当。キャラクターデザインやオブジェクトのデザインも担当。</p>
+                        <p class="Text-content">主に3Dグラフィックを担当。キャラクターデザインやオブジェクトのデザインも担当。</p>
                     </div>
                     <div class="content">
                         <div class="content-icon">
                             <img src="./images/content-icon.png" alt="Miku">
                             <p>Miku</p>
                         </div>
-                        <p>主にキャラクターの立ち絵、ストーリー作りを担当。ゲーム設計では、全面的なバックアップを行っている。</p>
+                        <p class="Text-content">主にキャラクターの立ち絵、ストーリー作りを担当。ゲーム設計では、全面的なバックアップを行っている。</p>
                     </div>
                     <div class="clear"></div>
                 </div>
